# TaskFlow

./: .clippy.toml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_REVIEW.md  Cargo.toml  DEVELOPMENT.md  README.md  ROADMAP.md  TODO.md  install.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml
benches/: taskflow_benchmarks.rs
docs/: COLLABORATION_FEATURES.md  DATA_BACKUP_FEATURES.md  FAQ.md  FEATURE_IDEAS.md  FILTER_SYNTAX.md  GAMIFICATION_FEATURES.md  GITHUB_GITLAB_SYNC.md  INTEGRATION_FEATURES.md  NATURAL_LANGUAGE_FEATURES.md  PRODUCTIVITY_FOCUS_FEATURES.md  QUICK_REFERENCE.md  UI_UX_FEATURES.md  USER_MANUAL.md  WORKFLOW_AUTOMATION_FEATURES.md
docs/adr/: 0001-use-elm-architecture.md  0002-storage-backend-abstraction.md  0003-undo-redo-system.md  README.md
screenshots/: generate.sh
screenshots/vhs/: demo.tape  record.sh
src/: lib.rs  main.rs  notifications.rs
src/app/: analytics.rs  e2e_workflow_tests.rs  macros.rs  message.rs  mod.rs  model.rs  quick_add.rs  templates.rs  undo.rs  update.rs
src/app/analytics/: breakdowns.rs  estimation.rs  insights.rs  mod.rs  tests.rs  time.rs  trends.rs
src/app/message/: goal.rs  habit.rs  mod.rs  navigation.rs  pomodoro.rs  system.rs  task.rs  time.rs  ui.rs
src/app/model/: cache.rs  editor.rs  filtering.rs  hierarchy.rs  layout_cache.rs  mod.rs  sample_data.rs  storage.rs  tests.rs  time_tracking.rs  types.rs  view_queries.rs
src/app/quick_add/: date.rs  mod.rs  tests.rs
src/app/undo/: action.rs  mod.rs  stack.rs  tests.rs
src/app/update/: goal.rs  habit.rs  mod.rs  navigation.rs  (+6 more)
src/config/: keybindings.rs  mod.rs  settings.rs  theme.rs
src/domain/: analytics.rs  audit_log.rs  calendar_event.rs  duplicate_detector.rs  filter.rs  goal.rs  habit.rs  key_result.rs  mod.rs  pomodoro.rs  project.rs  proptest_tests.rs  tag.rs  task.rs  time_entry.rs  work_log.rs
src/scripting/: actions.rs  api.rs  config.rs  engine.rs  error.rs  event.rs  mod.rs
src/storage/: error.rs  export.rs  export_import_comprehensive_tests.rs  import.rs  mod.rs  repository.rs
src/ui/: mod.rs  test_utils.rs  view.rs
tests/: integration.rs  proptest_tests.proptest-regressions  proptest_tests.rs  stress.rs  ui_snapshots.rs
tests/snapshots/: ui_snapshots__burndown_component__burndown_empty.snap  ui_snapshots__calendar_component__calendar_empty.snap  ui_snapshots__calendar_component__calendar_view.snap  ui_snapshots__dashboard_component__dashboard_empty.snap  ui_snapshots__eisenhower_component__eisenhower_empty.snap  ui_snapshots__eisenhower_component__eisenhower_matrix.snap  ui_snapshots__focus_view_component__focus_view_empty.snap  ui_snapshots__focus_view_component__focus_view_with_tasks.snap  ui_snapshots__forecast_component__forecast_empty.snap  ui_snapshots__heatmap_component__heatmap_empty.snap  ui_snapshots__help_component__help_popup_layout.snap  ui_snapshots__help_component__help_popup_small.snap  ui_snapshots__kanban_component__kanban_board.snap  ui_snapshots__kanban_component__kanban_empty.snap  ui_snapshots__kanban_component__kanban_narrow.snap  ui_snapshots__network_component__network_view.snap  ui_snapshots__regression_tests__sidebar_long_names.snap  ui_snapshots__regression_tests__sidebar_many_projects.snap  ui_snapshots__sidebar_component__sidebar_empty.snap  ui_snapshots__sidebar_component__sidebar_with_projects.snap  ui_snapshots__weekly_planner_component__weekly_planner.snap
(+320 files in other folders)
