[package]
name = "taskflow"
version = "0.1.0"
edition = "2021"
description = "A TUI project management application"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Regex for quick add parsing
regex = "1.11"

# IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Configuration
directories = "5.0"

# SQLite (for later phases)
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Scripting Engine
rhai = { version = "1.20", features = ["sync"] }

# CLI Arguments
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

[dev-dependencies]
tempfile = "3.13"
pretty_assertions = "1.4"
