[package]
name = "taskflow"
version = "0.4.0"
edition = "2021"
rust-version = "1.87"
description = "A TUI project management application"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Regex for quick add parsing
regex = "1.11"

# String similarity for duplicate detection
strsim = "0.11"

# IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Configuration
directories = "5.0"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# CLI Arguments
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop notifications (optional - gracefully degrades if unavailable)
notify-rust = { version = "4", optional = true }

# HTTP client for CalDAV sync (optional)
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

[features]
desktop-notifications = ["notify-rust"]
caldav-sync = ["reqwest"]

[dev-dependencies]
tempfile = "3.13"
pretty_assertions = "1.4"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.41", features = ["json", "yaml"] }

[[bench]]
name = "taskflow_benchmarks"
harness = false
